BAEL-5069 code for article on new features in the Java 16 incremental release